manifests/base/resources/qix-data-reload/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: qix-data-reload
    chart: reloads-1.7.3
    heritage: Helm
    release: reloads
  name: qix-data-reload
spec:
  ports:
  - name: qix-data-reload
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: qix-data-reload
    release: reloads
  type: ClusterIP
---
