manifests/base/resources/qix-data-reload/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://reloads-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: qix-data-reload
    chart: reloads-1.7.3
    heritage: Helm
    release: reloads
  name: qix-data-reload
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: qix-data-reload
          servicePort: 8080
        path: /api/v1/reloads
---
